for google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Andrew Gamal - Full-Stack Developer | MERN Stack Specialist</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GT97D88KKX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-GT97D88KKX');
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
